<resources>
    <string name="app_name">Quito Seguro</string>
    <string name="title_activity_main" translatable="false">Quito Seguro</string>

    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>

    <!--Offenses-->
    <string name="all">All</string>
    <string name="off_robbery">Robbery</string>
    <string name="off_violence">Violence</string>
    <string name="off_express_kidnapping">Express Kidnapping</string>
    <string name="off_missing_person">Missing Person</string>
    <string name="off_murder">Murder</string>
    <string name="off_house_robbery">House Robbery</string>
    <string name="off_store_robbery">Store Robbery</string>
    <string name="off_grand_theft_auto">Grand Theft Auto</string>
    <string name="off_credit_card_cloning">Credit Card Cloning</string>
    <string name="off_public_disorder">Public Disorder</string>

    <string name="action_settings">Settings</string>
    <string name="quito_seguro" translatable="false">Quito Seguro</string>
    <string name="social_share_text">Help make the city safer</string>
    <string name="quito_seguro_icon">Quito Seguro icon</string>
    <string name="about_quito_seguro">About Quito Seguro</string>
    <string name="reported_offenses">Reported Offenses</string>
    <string name="report_statistics">Report Statistics</string>
    <string name="security_tips">Security Tips</string>
    <string name="developed_by">DEVELOPED BY PROF APPS</string>
    <string name="about_text">This app is a contribution to Quito\'s citizens and tourists, because we also want a safer city and we believe it is definitely possible.</string>
    <string name="emergency_contacts">EMERGENCY CONTACTS IN QUITO</string>
    <string name="legal_notices">LEGAL NOTICES</string>
    <string name="legal_notices_item">Licenses and Attributions</string>
    <string name="emergencies_911">Emergencies 911</string>
    <string name="police_101">Police 101</string>
    <string name="fire_department_102">Fire Department 102</string>
    <string name="call_emergency_contact">Call Emergency Contact</string>
    <string name="call_emergency_contact_text">Are you sure you want to call %1$s?</string>
    <string name="send">Send</string>
    <string name="title_send_a_report">Report an Offense</string>
    <string name="map_pin" translatable="false">Map pin</string>
    <string name="when_did_it_happen">When did it happen?</string>
    <string name="what_happened">What happened?</string>
    <string name="where_did_it_happen">Where did it happen?</string>
    <string name="report_sent">Thank you for sending your report.</string>
    <string name="tip_image">Tip image</string>
    <string name="tip_header_image">Tip header image</string>
    <string name="share_this_tip">Share this Tip</string>
    <string name="share_tip_title">How do you want to share this tip?</string>
    <string name="download_app_at">Download Quito Seguro app on the Play Store at:</string>
</resources>
