<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_reports"
            android:icon="@drawable/ic_my_location_black"
            android:title="@string/reported_offenses"
            android:checked="true" />
        <item
            android:id="@+id/nav_stats"
            android:icon="@drawable/ic_stats_black"
            android:title="@string/report_statistics" />
        <item
            android:id="@+id/nav_tips"
            android:icon="@drawable/ic_lightbulb_outline_black"
            android:title="@string/security_tips" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_info_outline_black"
            android:title="@string/about_quito_seguro" />
    </group>

</menu>
