<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDarkest">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView3"
        android:layout_gravity="center_horizontal">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="@string/developed_by"
                android:textColor="@color/colorLightGrayText"
                android:textSize="20sp"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="32dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:background="@color/colorListItemBackground"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_weight="1.17"
                android:padding="8dp">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="8dp"
                    android:contentDescription="@string/quito_seguro_icon"
                    android:scaleType="fitCenter"
                    android:src="@drawable/logo_large" />

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_vertical">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/about_text"
                        android:textColor="#ffffff"
                        android:textSize="17sp"
                        android:gravity="center_vertical"
                        android:padding="8dp"
                        android:layout_weight="1" />
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="@string/emergency_contacts"
                android:textColor="@color/colorLightGrayText"
                android:textSize="20sp"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="32dp"
                android:id="@+id/textView2" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="58dp"
                android:background="@color/colorListItemBackground"
                android:orientation="horizontal"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:gravity="center_vertical"
                android:clickable="true"
                android:id="@+id/emergencyCallLayout">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:text="@string/emergencies_911"
                    android:textColor="#ffffff"
                    android:textSize="17sp"
                    android:gravity="center_vertical"
                    android:layout_marginLeft="20dp" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="@string/legal_notices"
                android:textColor="@color/colorLightGrayText"
                android:textSize="20sp"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="32dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="58dp"
                android:background="@color/colorListItemBackground"
                android:orientation="horizontal"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:gravity="center_vertical"
                android:id="@+id/legalNoticesLayout"
                android:clickable="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:text="@string/legal_notices_item"
                    android:textColor="#ffffff"
                    android:textSize="17sp"
                    android:gravity="center_vertical"
                    android:layout_marginLeft="20dp" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>