<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDarkest">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:background="@color/colorListItemBackground"
        android:orientation="horizontal"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:gravity="center_vertical"
        android:clickable="true"
        android:layout_marginTop="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:text="@string/what_happened"
            android:textColor="#ffffff"
            android:textSize="17sp"
            android:gravity="center_vertical"
            android:layout_marginLeft="20dp"
            android:id="@+id/offenseTextView" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:background="@color/colorListItemBackground"
        android:orientation="horizontal"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:gravity="center_vertical"
        android:clickable="true"
        android:layout_marginTop="2dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:text="@string/when_did_it_happen"
            android:textColor="#ffffff"
            android:textSize="17sp"
            android:gravity="center_vertical"
            android:layout_marginLeft="20dp"
            android:id="@+id/dateTextView" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:text="@string/where_did_it_happen"
        android:textColor="#ffffff"
        android:textSize="17sp"
        android:gravity="center_vertical"
        android:layout_marginLeft="20dp"
        android:id="@+id/textView3"
        android:layout_marginTop="16dp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp">

        <fragment xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/map"
            tools:context=".CreateActivity"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true" />

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:id="@+id/imageView2"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:src="@drawable/pin"
            android:contentDescription="@string/map_pin"
            android:alpha="0.75" />
    </RelativeLayout>


</LinearLayout>